push to activate vercel

--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -1,22 +1,43 @@
 ---
-title: About
-description: About the site
+title: About Me
+description: Mikiyas Ayele
 ---
 
-Blandit libero volutpat sed cras ornare arcu. Cursus sit amet dictum sit amet. Nunc vel risus commodo viverra maecenas accumsan. Libero id faucibus nisl tincidunt eget nullam non nisi est. Varius quam quisque id diam vel quam. Id donec ultrices tincidunt arcu non.
+## 🧗 Entrepreneurship
 
-## Consent
+Interested in shipping small(well packaged) products that provide value to people
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat sed cras ornare arcu. Nibh ipsum consequat nisl vel pretium lectus quam id leo. A arcu cursus vitae congue. Amet justo donec enim diam. Vel pharetra vel turpis nunc eget lorem. Gravida quis blandit turpis cursus in. Semper auctor neque vitae tempus. Elementum facilisis leo vel fringilla est ullamcorper eget nulla. Imperdiet nulla malesuada pellentesque elit eget.
+## ⚛️ Science and Technology
 
-Felis donec et odio pellentesque diam volutpat commodo sed.
+I break down science stuff in my blog. I believe that we aleady posses the capability
+to build all the tech for the next 1000 years. I want to steal innovations and ideas from the future. Like Nikola Tesla for example. I know 
+someone will discover some kind of gravity propulsion in the future but I want to steal their glory 😈
 
-Tortor consequat id porta nibh. Fames ac turpis egestas maecenas pharetra convallis posuere morbi leo. Scelerisque fermentum dui faucibus in. Tortor posuere ac ut consequat semper viverra.
+## 🛸 Sci-Fi Novels
 
-## Information we collect
+I want to read all the classics. (currently cooking sth that will help me do that)
+send me recommendations and short stories. 
 
-Amet justo donec enim diam. In hendrerit gravida rutrum quisque non. Hac habitasse platea dictumst quisque sagittis purus sit.
+## 🚀 e/acc 
 
-## How we use your Information
+Core philosophy: Speed is not enough you need Acceleration 🚀🚀🚀 
+Vi < Vf => ♾️
 
-Ut sem nulla pharetra diam sit amet nisl suscipit adipiscing. Consectetur adipiscing elit pellentesque habitant. Ut tristique et egestas quis ipsum suspendisse ultrices gravida.
+## ☀️ I 💓 Sun
+
+why you may ask? because the speed at which the sun radiates its energy is the literal limit of the universe. I always ask myself: Is what I'm doing the limit of the system that 
+I am interacting with, most of the times the answer is less than 1%
+
+## 💡 Philosophy
+
+My philosophy is centered around the idea of limitless possibilities. 💫 I firmly believe that the only limit is our WILL.
+
+### ⚡ Speed of Data
+
+The that the internet will always be a profitable venture if we can move at the speed of data. 🌐
+It will process and validate your idea or whatever you do on it at close to the speed of light. 
+I see it as an organism. And I'm looking for more and more ways to interact with this "system"
+
+---
+
+If you share these interests or just want to connect, feel free to [reach out](#)!
